# simpleROS

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: listener.py  spaceshipsim.py  talker.py
simpleros/: __init__.py  cli.py  core.py
simpleros/msg/: __init__.py  geometry_msg.capnp  std_msg.py
