[project]
name = "simpleros"
version = "0.0.1"
description = "A lightweight, Python-first ROS alternative using Zenoh and Cap'n Proto."
requires-python = ">=3.8"
dependencies = [
    "eclipse-zenoh",
    "capnpy"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["simpleros*"]

[tool.ruff]
exclude = [
    "simpleros/msg/*_msg.py",
]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
